Don't show deprecation warning for Unsafe on JDK 24+ (#899)